# rent-scraper

./: .gitignore  LICENSE  README.md  config.example.py  config.example.yaml  config.py  filters.py  main.py  models.py  notifier.py  pyproject.toml  run.py  scheduler.py  scraper.py  zoopla_scraper.py
.github/workflows/: ci.yaml
portals/: rightmove.py  zoopla.py
tests/: test_filters.py  test_notifier.py  test_rightmove.py  test_zoopla.py
