[project]
name = "rent-scraper"
version = "0.1.0"
description = "Personal rental search filter"
requires-python = ">=3.12"
dependencies = [
    "curl-cffi>=0.15.0",
    "httpx>=0.28.1",
    "playwright>=1.60.0",
]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "."
explicit_package_bases = true
